# charles-microbounties

./: .eslintrc.js  .eslintrc.json  .gitignore  README.md  cli.ts  eslint.config.js  flake.nix  git-context  implementation_1424.md  implementation_1425.md  implementation_1426.md  implementation_1427.md  implementation_1428.md  implementation_1429.md  implementation_1431.md  implementation_1432.md  index.html  index.ts  mcp-server.ts  package-lock.json  package-meta.ts  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tsconfig.json
.github/ISSUE_TEMPLATE/: bounty-submission.yml
.github/workflows/: ci.yml  gitpage.yml  publish.yml
UI/: requirements.txt
app/rag/: file_loader.py
example/src/: App.tsx
genblaze/replicate/: __init__.py  connector.py
gitnexus/: package-lock.json  package.json
plugins/spakky-fastapi/: README.md
plugins/spakky-opentelemetry/: README.md
plugins/spakky-sqlalchemy/: setup.py
plugins/spakky-typer/: README.md
release/: publish.js
scripts/: test_mutants_summary.py
setup/: config.js
src/: addresscompiler.d.ts  bin.ts  cli-metadata-handler.ts  cli.js  cli.ts  client.ts  core.ts  index.test.ts  index.ts  tool.ts  version.ts
src/__tests__/: cli.test.ts
src/cli/: args.ts  cli.test.ts  main.ts
src/controllers/: messagesController.js
src/madsci_common/: pyproject.toml
test/: cli-flags.test.js
tests/: cli-metadata.test.mjs  cli.test.mjs  cli.test.ts  getCoin.test.js  getCoins.test.js  getCoinsOHLCVHistorical.test.js  getGobal.test.js  version.test.ts
tools/: app.py
ui/: index.js
(+28 files in other folders)
