[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "django-yandex-captcha"
version = "1.0.0"
description = "Django Yandex Captcha"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-django = "^4.4"

[tool.poetry.dependencies]
django-ipware = "^3.0.1"