[tool.poetry]
name = "fastapi-startkit"
version = "0.31.0"
description = ""

[tool.poetry.dependencies]
fastapi-startkit = { version = "0.31.0", extras = ["database", "fastapi", "sqlite"] }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"